--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "gaeul8.github.io/movie_app_2020"
+  "homepage": "https://gaeul8.github.io/movie_app_2020"
 }
